--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-pydantic==2.4.2
 lightrag==0.0.0a13
 openai==1.3.5
-pandas==2.1.3
+python-dotenv>=1.0.1
 aiofiles==23.2.1
 python-multipart==0.0.6
-python-dotenv==1.0.0
-pytest==7.4.3
-pytest-asyncio==0.21.1
-sqlalchemy==2.0.23
-sqlite3-utils==3.35.2
