--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,33 +1,24 @@
 {
   "name": "miranda-frontend",
   "version": "1.0.0",
-  "description": "Miranda AI-Assisted Writing Platform Frontend",
-  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "test": "vitest"
+    "build": "vite build"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0",
-    "@tanstack/react-query": "^5.8.4",
-    "lucide-react": "^0.292.0",
-    "tailwindcss": "^3.3.5",
-    "clsx": "^2.0.0"
+    "axios": "^1.3.4",
+    "lucide-react": "^0.263.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@vitejs/plugin-react": "^4.1.1",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.0",
-    "vitest": "^0.34.6",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/jest-dom": "^6.1.5",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31"
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^4.0.0",
+    "typescript": "^5.0.2",
+    "vite": "^4.3.2",
+    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23"
   }
 }
