--- a/miranda/.env.example
+++ b/miranda/.env.example
@@ -1,3 +1,6 @@
+# Miranda Configuration
 OPENAI_API_KEY=your_openai_api_key_here
 BACKEND_URL=http://localhost:8000
 FRONTEND_URL=http://localhost:3000
+DATABASE_PATH=./data/sample_projects
+LIGHTRAG_STORAGE=./data/lightrag_storage
